# repo-qa

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enhancement_request.md  enhancement_request.yml  feature_request.md  feature_request.yml
.github/workflows/: test.yml
docs/: license-policy.md
repoqa/: __init__.py  api.py  app.py  config.py  license_checker.py
repoqa/embedding/: __init__.py  embedding_model.py  sentence_transformer.py
repoqa/generation/: generator.py  llm.py
repoqa/indexing/: git_indexer.py  indexer.py
repoqa/llm/: llm_factory.py
repoqa/pipeline/: __init__.py  agentic_rag.py  langchain_rag.py  pipeline.py  prompts.py  rag.py
repoqa/retrieval/: retriever.py
repoqa/storage/: __init__.py  chroma_store.py  collection_manager.py  langchain_chroma.py  vector_store.py
repoqa/util/: setup_util.py
scripts/: check-licenses.sh
tests/: README.md  __init__.py  conftest.py  test_api.py  test_app.py  test_config.py  test_license_checker.py
tests/embedding/: __init__.py  test_sentence_transformer.py
tests/indexing/: __init__.py  test_git_indexer.py
tests/llm/: __init__.py  test_llm_factory.py
tests/pipeline/: __init__.py  test_agentic_rag.py  test_rag.py
tests/retrieval/: __init__.py  test_retriever.py
tests/storage/: __init__.py  test_chroma_store.py  test_collection_manager.py
