[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoqa"
version = "0.1.0"
authors = [
  { name = "Afif Al Mamun", email = "afifanik@gmail.com" },
]
description = "Repository-level Question Answering with RAG"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/afifaniks/repo-qa"
"Bug Tracker" = "https://github.com/afifaniks/repo-qa/issues"